# multi-map-navigation

./: CMakeLists.txt  README.md  package.xml  wormholes.db
action/: NavigateMaps.action  SwitchMap.action
include/multi_map_navigation/: map_graph.h  map_switcher.h  multi_map_navigation.h  shortest_path_service.h  wormhole_database.h
launch/: map_navigation.launch  turtlebot3_multi_map_navigation.launch
maps/: mapA.pgm  mapA.yaml  mapB.pgm  mapB.yaml  mapC.pgm  mapC.yaml  mapD.pgm  mapD.yaml  mapE.pgm  mapE.yaml  mapF.pgm  mapF.yaml  mapG.pgm  mapG.yaml
src/: map_graph.cpp  map_switcher.cpp  map_switcher_node.cpp  multi_map_navigation.cpp  multi_map_navigation_node.cpp  shortest_path_service.cpp  shortest_path_service_node.cpp  waypoint_navigator_node.cpp  wormhole_database.cpp
srv/: LoadMap.srv  ShortestPath.srv
